tools/sddl2/assembler/tests/fail/stack_drop_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.u32 10
stack.drop 5
halt
